force-app/main/default/objects/Vehicle_Interest__c/Vehicle_Interest__c.object-meta.xml
<CustomObject>
    <description>Information imported from Customer Visit spreadsheet.</description>
    <label>VehicleInterest</label>
    <nameField>
        <label>VehicleInterest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Interests.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>