force-app/main/default/objects/Vehicle_Interest__c/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <label>Exterior Color</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Tan</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>