force-app/main/default/objects/Vehicle_Interest__c/fields/X4_Wheel_Drive__c.field-meta.xml
<CustomField>
    <fullName>X4_Wheel_Drive__c</fullName>
    <label>4 Wheel Drive</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>